--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "watchify": "^2.1.1"
   },
   "scripts": {
-    "start": "watchify -o js/bundle.js -v -d .",
-    "build": "NODE_ENV=production browserify . | uglifyjs -cm > js/input-creditcard.min.js",
+    "start": "watchify -o bundle.js -v -d .",
+    "build": "NODE_ENV=production browserify . | uglifyjs -cm > input-creditcard.min.js",
     "test": "jest"
   },
   "browserify": {
