bundle.js added to gitignore

--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
     "react-component"
   ],
   "homepage": "",
-  "author": "Eniz Gülek <enizgulek@gmail.com> (https://github.com/enzglk)",
+  "author": "Eniz Gülek <enizgulek@gmail.com> (https://github.com/eniz)",
   "license": "MIT"
 }
