--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "component",
     "react-creditcard-input",
     "credit card",
-    "flux",
+    "flux"
   ],
   "authors": [
     "Eniz Gulek<enizgulek@gmail.com> (http://enizgulek.com)"
