--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "build": "npm run build-js",
     "watch": "npm run watch-js & npm run watch-css & serve .",
     "test": "npm run build",
+    "deploy": "gh-pages-deploy",
     "build-js": "browserify --extension=.jsx --extension=.js src/app.jsx | uglifyjs > build/build.js",
     "watch-js": "watchify --extension=.jsx --extension=.js src/app.jsx -o build/build.js --debug --verbose",
     "lint-eslint": "eslint .",
@@ -49,6 +50,7 @@
     "browser-sync": "^2.1.6",
     "browserify": "^8.0.3",
     "eslint": "^0.14.1",
+    "gh-pages-deploy": "^0.3.0",
     "nodemon": "^1.3.7",
     "rework": "^1.0.1",
     "rework-npm": "^1.0.0",
