--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "react-creditcard-input",
-  "version": "0.0.1",
-  "description": "Credit card input as react component ",
-  "main": "src/app.jsx",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:eniz/react-creditcard-input.git"
+  "version": "0.1.0",
+  "description": "Credit card input as react component.",
+  "main": "lib/index.js",
+  "scripts": {
+    "start-dev": "babel ./src --watch --out-dir ./lib & npm link && cd demo && npm install && npm link react-date-range && npm run start-dev",
+    "prebuild": "rm -rf lib/*",
+    "build": "babel ./src --out-dir ./lib",
+    "prepublish": "npm run build"
   },
   "keywords": [
     "react-component",
@@ -15,46 +17,19 @@
     "credit card",
     "flux"
   ],
-  "authors": [
-    "Eniz Gulek<enizgulek@gmail.com> (http://enizgulek.com)"
-  ],
-  "browserify": {
-    "transform": [
-      "babelify"
-    ]
+  "author": "Eniz Gulek <enizgulek@gmail.com>",
+  "license": "GPL-3.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eniz/react-creditcard-input"
   },
-  "scripts": {
-    "start": "npm run build && serve .",
-    "build": "npm run build-js",
-    "watch": "npm run watch-js & npm run watch-css & serve .",
-    "test": "npm run build",
-    "deploy": "gh-pages-deploy",
-    "build-js": "browserify --extension=.jsx --extension=.js src/app.jsx | uglifyjs > build/build.js",
-    "watch-js": "watchify --extension=.jsx --extension=.js src/app.jsx -o build/build.js --debug --verbose",
-    "lint-eslint": "eslint .",
-    "lint-jscs": "jscs .",
-    "lint": "npm run lint-eslint && npm run lint-jscs"
-  },
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/eniz/react-creditcard-input/issues"
   },
-  "homepage": "https://github.com/eniz/react-creditcard-input",
   "dependencies": {
-    "react": "^0.13.1"
+    "react": "^0.14.0"
   },
   "devDependencies": {
-    "babelify": "^6.0.2",
-    "browser-sync": "^2.1.6",
-    "browserify": "^8.0.3",
-    "eslint": "^0.14.1",
-    "gh-pages-deploy": "^0.3.0",
-    "nodemon": "^1.3.7",
-    "rework": "^1.0.1",
-    "rework-npm": "^1.0.0",
-    "rework-npm-cli": "^0.1.1",
-    "serve": "^1.4.0",
-    "uglify-js": "^2.4.15",
-    "watchify": "^2.1.1"
+    "babel": "^5.8.23"
   }
 }
